# corgide

./: .gitignore  CMakeLists.txt  README.md  TODO.md  codeeditor.cpp  codeeditor.hpp  mainwindow.ui  test  test.cpp
QLightTerminal/: qlightterminal.cpp  qlightterminal.h
app/cpp/include/: codeeditor.hpp  codeforceswrapper.hpp  competitiondialog.hpp  ds.hpp  font_settings.hpp  fs.hpp  mainwindow.hpp  preferencesdialog.hpp  preferenceswidget.hpp  probleminputdialog.hpp  urlgenerator.hpp
app/cpp/include/ds/: preferences.hpp  problem.hpp  shortcuttype.hpp
app/cpp/src/: codeeditor.cpp  codeforceswrapper.cpp  main.cpp  mainwindow.cpp  preferencesdialog.cpp  preferenceswidget.cpp
app/cpp/ui/: mainwindow.ui
app/ui/: competitiondialog.ui  mainwindow.ui  preferencesdialog.ui  preferenceswidget.ui  probleminputdialog.ui
sh/: build.sh  clean.sh  run.sh
